Bug 1054394 - Avoid clang internal compiler error in Zone.h. r=jfkthame